# smartcuckoo_fw

./: .editorconfig  .gitignore  CMakeLists.txt  adv.cpp  bin  ble.hpp  clock.c  clock.h  command.md  datetime_utils.c  datetime_utils.h  fstab.c  limits.h  locale.h  main.c  main.cpp  mplayer.h  mplayer_noise.c  mplayer_noise.h  mplayer_voice.c  mplayer_voice.h  noise_apwr.c  noise_apwr.h  noise_ringtone.c  rtc_calibration.c  shell.cpp  shell_ota.c  silabs  smartcuckoo.code-workspace  smartcuckoo.h  ultracore  voice.c  voice.h  voice_lang_map.c  ws2812b_driver.c
_doc/: command.md  圆柱形白噪音_IO.txt  报时按钮_IO.txt  报时按键国民方案IO表.txt
io_ext/: bs81xc.c  ioext.h  xl9535.c
panel/: SHT4x.c  SHT4x.h  bs81xc.c  bs81xc.h  lamp.c  lamp.h  mplayer.c  mplayer_r11.c  panel.c  panel.shell.c  panel.shell.file.c  panel.shell.fs.c  panel_drv_common.c  panel_i2c_drv.h  panel_light_sens.c  panel_light_sens.h  panel_ml_i2c_drv.c  panel_private.h  panel_sl_i2c_drv.c  xl9535.c  xl9535.h
panel/b_config/: EFR32_config.h  PERIPHERAL_config.h  touch_keymap.c
panel/c_config/: EFR32_config.h  PERIPHERAL_config.h  touch_keymap.c
panel/drv/: SHT4x.h  irda.c  mplayer.c  panel_drv_common.c  panel_private.h  panel_sl_i2c_drv.c
sensors/: AHT2X.c  AHT2X.h  SHT4x.c  SHT4x.h  env.h  env_aht2x.c  env_sht4x.c  irda.c  irda.h
smart_led/: led_flags.c  led_flags.h  led_time.c  led_time.h
talking_button/: talking_button.c
talking_button/config/: EFR32_config.h  N32X45X_config.h  PERIPHERAL_config.h
talking_button/drv_wt/: wt2003h.h  wt2003h4.c  wt2003h_mplayer.c  wt2003hm01.c  wt2605c_mplayer.c
zinc/: zinc.c
zinc/config/: N32X45X_config.h  PERIPHERAL_config.h
zone/: zone.c
zone/config/: N32X45X_config.h  PERIPHERAL_config.h
